cli/kubernetes/istio/telemetry/prometheus/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: prometheus-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 15030
        name: https-prometheus
        protocol: HTTPS
      tls:
        mode: SIMPLE
        serverCertificate: sds
        privateKey: sds
        credentialName: telemetry-gw-cert
      hosts:
        - "telemetry.edoxa.gg"
